--- a/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
+++ b/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
@@ -186,3 +186,5 @@ _UI_EGenericType_eClassifier_description = The classifier denoted by this generi
 _UI_ETypeParameter_eBounds_feature = EBounds
 _UI_Unknown_feature = Unspecified
 
+_UI_AbstractBootstrap_pid_feature = Pid
+_UI_AbstractBootstrap_id_feature = Id
