--- a/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
+++ b/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
@@ -188,3 +188,5 @@ _UI_Unknown_feature = Unspecified
 
 _UI_AbstractBootstrap_pid_feature = Pid
 _UI_AbstractBootstrap_id_feature = Id
+_UI_ProxyChannel_type = Proxy Channel
+_UI_ProxyChannel_proxyBootstrap_feature = Proxy Bootstrap
