--- a/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
+++ b/bundles/io.blesmol.netty.model.transport.edit/plugin.properties
@@ -190,3 +190,26 @@ _UI_AbstractBootstrap_pid_feature = Pid
 _UI_AbstractBootstrap_id_feature = Id
 _UI_ProxyChannel_type = Proxy Channel
 _UI_ProxyChannel_proxyBootstrap_feature = Proxy Bootstrap
+_UI_InboundOutboundByteBuf_type = Inbound Outbound Byte Buf
+_UI_InboundOutboundByteBuf_inbound_feature = Inbound
+_UI_Channel_byteBufs_feature = Byte Bufs
+_UI_AnyType_type = Any Type
+_UI_ProcessingInstruction_type = Processing Instruction
+_UI_SimpleAnyType_type = Simple Any Type
+_UI_XMLTypeDocumentRoot_type = Document Root
+_UI_InboundOutboundByteBuf_dateTime_feature = Date Time
+_UI_AnyType_mixed_feature = Mixed
+_UI_AnyType_any_feature = Any
+_UI_AnyType_anyAttribute_feature = Any Attribute
+_UI_ProcessingInstruction_data_feature = Data
+_UI_ProcessingInstruction_target_feature = Target
+_UI_SimpleAnyType_rawValue_feature = Raw Value
+_UI_SimpleAnyType_value_feature = Value
+_UI_SimpleAnyType_instanceType_feature = Instance Type
+_UI_XMLTypeDocumentRoot_mixed_feature = Mixed
+_UI_XMLTypeDocumentRoot_xMLNSPrefixMap_feature = XMLNS Prefix Map
+_UI_XMLTypeDocumentRoot_xSISchemaLocation_feature = XSI Schema Location
+_UI_XMLTypeDocumentRoot_cDATA_feature = CDATA
+_UI_XMLTypeDocumentRoot_comment_feature = Comment
+_UI_XMLTypeDocumentRoot_processingInstruction_feature = Processing Instruction
+_UI_XMLTypeDocumentRoot_text_feature = Text
